# Kestrel

./: .gitignore  .gitmodules  README.md
simulation/: README.md
simulation/models/kestrel_drone/: model.config  model.sdf
simulation/models/kestrel_drone/meshes/: CameraPt1.STL  CameraPt2.STL  Prop2.STL  Prop3.STL
simulation/models/kestrel_drone_lidar/: model.config  model.sdf
simulation/models/maze_model/: model.config  model.config.Zone.Identifier
simulation/worlds/: aroundCorner.sdf  obstacleAvoidance.sdf  openWorld.sdf
src/kestrel_stack/kestrel_control/python/kestrel_control/: pid_controller.py
src/kestrel_stack/kestrel_perception/: CMakeLists.txt  package.xml
src/kestrel_stack/kestrel_perception/config/: dbscan_params.yaml  filter_params.yaml  grid_params.yaml  sensors.yaml
src/kestrel_stack/kestrel_perception/include/kestrel_perception/: sensors_drivers_node.hpp
src/kestrel_stack/kestrel_perception/src/: sensors_drivers_node.cpp
src/object_detection/models/deepSORT/: DataAssociation.py
